package com.niyaj.popos.features.employee.domain.util

object EmployeeTestTags {

    const val EMPLOYEE_NAME_FIELD = "Employee Name"
    const val EMPLOYEE_NAME_ERROR = "Employee NameError"

    const val EMPLOYEE_PHONE_FIELD = "Employee Phone"
    const val EMPLOYEE_PHONE_ERROR = "Employee PhoneError"

    const val EMPLOYEE_MONTHLY_SALARY_FIELD = "Employee Monthly salary"
    const val EMPLOYEE_MONTHLY_SALARY_ERROR = "Employee MonthlySalaryError"

    const val EMPLOYEE_SALARY_TYPE_FIELD = "Employee Salary Type"

    const val EMPLOYEE_TYPE_FIELD = "Employee Type"

    const val EMPLOYEE_POSITION_FIELD = "Employee Position"
    const val EMPLOYEE_POSITION_ERROR = "Employee PositionError"

    const val EMPLOYEE_JOINED_DATE_FIELD = "Employee JoinedDate"

    const val ADD_EDIT_EMPLOYEE_BUTTON = "AddEdit EmployeeButton"


    //Details screen tags
    const val EMPLOYEE_DETAILS_SCREEN = "Employee DetailsScreen"
    const val REMAINING_AMOUNT_TEXT = "remainingAmount"
}