...
            navActions = {
                IconButton(
                    onClick = {
                        navController.navigate(AddEditSalaryScreenDestination(employeeId = employeeId))
                    }
                ) {
                    Icon(imageVector = Icons.Default.Add, contentDescription = "Add Payment Entry")
                }

                IconButton(
                    onClick = {
                        navController.navigate(AddEditAbsentScreenDestination(employeeId = employeeId))
                    }
...
                LazyColumn(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(SpaceSmall),
                    state = lazyListState,
                ) {
                    item(key = "CalculateSalary") {
                        SalaryEstimationCard(
                            state = paymentDetailState,
                            dropdownText = selectedSalaryDate?.first?.toYearAndMonth ?: if (salaryDates.isNotEmpty()) salaryDates.first().startDate.toYearAndMonth else "",
                            salaryDates = salaryDates,
                            onDateClick = {
                                employeeDetailsViewModel.onEvent(
...
                            },
                        )

                        Spacer(modifier = Modifier.height(SpaceMedium))
                    }

                    item(key = "EmployeeDetails") {
                        EmployeeDetails(
                            employeeState = employeeState,
                            employeeDetailsExpanded = employeeDetailsExpanded,
                            onClickEdit = {
                                navController.navigate(AddEditEmployeeScreenDestination(employeeId))
                            },
...
                            }
                        )

                        Spacer(modifier = Modifier.height(SpaceMedium))
                    }

                    item(key = "PaymentDetails") {
                        PaymentDetails(
                            salariesState = salariesState,
                            paymentDetailsExpanded = paymentDetailsExpanded,
                            onExpanded = {
                                paymentDetailsExpanded = !paymentDetailsExpanded
                            },
...
                            }
                        )

                        Spacer(modifier = Modifier.height(SpaceMedium))
                    }

                    item(key = "AbsentDetails") {
                        AbsentDetails(
                            absentState = absentState,
                            absentReportsExpanded = absentReportsExpanded,
                            onExpanded = {
                                absentReportsExpanded = !absentReportsExpanded
                            },
...
            trailing = {
                IconButton(
                    onClick = onClickEdit
                ) {
                    Icon(
                        imageVector = Icons.Default.Edit,
                        contentDescription = "Edit Employee",
                        tint = MaterialTheme.colors.primary
                    )
                }
            },
            rowClickable = true,
            expand = { modifier: Modifier ->
...
