package com.niyaj.popos.features.employee.presentation

import androidx.activity.compose.setContent
import androidx.compose.animation.ExperimentalAnimationApi
import androidx.compose.material.ExperimentalMaterialApi
import androidx.compose.material.rememberScaffoldState
import androidx.compose.ui.test.assertTextEquals
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.onAllNodesWithTag
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTextClearance
import androidx.compose.ui.test.performTextInput
import androidx.compose.ui.test.performTouchInput
import androidx.compose.ui.test.swipeLeft
import androidx.compose.ui.test.swipeRight
import androidx.compose.ui.test.swipeUp
import androidx.navigation.NavHostController
import androidx.navigation.plusAssign
import androidx.test.espresso.Espresso
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.google.accompanist.navigation.animation.rememberAnimatedNavController
import com.google.accompanist.navigation.material.ExperimentalMaterialNavigationApi
import com.google.accompanist.navigation.material.rememberBottomSheetNavigator
import com.niyaj.popos.common.utils.Constants
import com.niyaj.popos.common.utils.Constants.NEGATIVE_BUTTON
import com.niyaj.popos.common.utils.Constants.POSITIVE_BUTTON
import com.niyaj.popos.common.utils.Constants.SEARCH_BAR_CLEAR_BUTTON
import com.niyaj.popos.common.utils.Constants.STANDARD_BACK_BUTTON
import com.niyaj.popos.common.utils.Constants.STANDARD_SEARCH_BAR
import com.niyaj.popos.common.utils.toDate
import com.niyaj.popos.common.utils.toRupee
import com.niyaj.popos.common.utils.toSalaryDate
import com.niyaj.popos.features.MainActivity
import com.niyaj.popos.features.common.di.RealmModule
import com.niyaj.popos.features.common.ui.theme.PoposTheme
import com.niyaj.popos.features.common.util.PoposNavigation
import com.niyaj.popos.features.destinations.EmployeeScreenDestination
import com.niyaj.popos.features.employee.domain.model.Employee
import com.niyaj.popos.features.employee.domain.util.EmployeeSalaryType
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.ADD_EDIT_EMPLOYEE_BUTTON
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.EMPLOYEE_DETAILS_SCREEN
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.EMPLOYEE_JOINED_DATE_FIELD
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.EMPLOYEE_MONTHLY_SALARY_ERROR
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.EMPLOYEE_MONTHLY_SALARY_FIELD
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.EMPLOYEE_NAME_ERROR
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.EMPLOYEE_NAME_FIELD
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.EMPLOYEE_PHONE_ERROR
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.EMPLOYEE_PHONE_FIELD
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.EMPLOYEE_POSITION_ERROR
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.EMPLOYEE_POSITION_FIELD
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.EMPLOYEE_SALARY_TYPE_FIELD
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.EMPLOYEE_TYPE_FIELD
import com.niyaj.popos.features.employee.domain.util.EmployeeTestTags.REMAINING_AMOUNT_TEXT
import com.niyaj.popos.features.employee.domain.util.EmployeeType
import com.niyaj.popos.features.employee.domain.util.PaymentType
import com.niyaj.popos.features.employee.domain.util.SalaryType
import com.niyaj.popos.features.employee_attendance.domain.util.AbsentScreenTestTags
import com.niyaj.popos.features.employee_attendance.domain.util.AbsentScreenTestTags.ABSENT_DATE_FIELD
import com.niyaj.popos.features.employee_attendance.domain.util.AbsentScreenTestTags.ABSENT_REASON_FIELD
import com.niyaj.popos.features.employee_attendance.domain.util.AbsentScreenTestTags.ADD_EDIT_ABSENT_ENTRY_BTN
import com.niyaj.popos.features.employee_salary.domain.model.EmployeeSalary
import com.niyaj.popos.features.employee_salary.domain.util.SalaryScreenTags.ADD_EDIT_PAYMENT_ENTRY_BUTTON
import com.niyaj.popos.features.employee_salary.domain.util.SalaryScreenTags.GIVEN_AMOUNT_ERROR
import com.niyaj.popos.features.employee_salary.domain.util.SalaryScreenTags.GIVEN_AMOUNT_FIELD
import com.niyaj.popos.features.employee_salary.domain.util.SalaryScreenTags.GIVEN_DATE_FIELD
import com.niyaj.popos.features.employee_salary.domain.util.SalaryScreenTags.PAYMENT_TYPE_FIELD
import com.niyaj.popos.features.employee_salary.domain.util.SalaryScreenTags.SALARY_EMPLOYEE_NAME_ERROR
import com.niyaj.popos.features.employee_salary.domain.util.SalaryScreenTags.SALARY_EMPLOYEE_NAME_FIELD
import com.niyaj.popos.features.employee_salary.domain.util.SalaryScreenTags.SALARY_NOTE_ERROR
import com.niyaj.popos.features.employee_salary.domain.util.SalaryScreenTags.SALARY_NOTE_FIELD
import com.niyaj.popos.features.employee_salary.domain.util.SalaryScreenTags.SALARY_TYPE_FIELD
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import dagger.hilt.android.testing.UninstallModules
import org.junit.Before
import org.junit.FixMethodOrder
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.junit.runners.MethodSorters

@HiltAndroidTest
@UninstallModules(RealmModule::class)
@FixMethodOrder(MethodSorters.NAME_ASCENDING)
@RunWith(AndroidJUnit4::class)
class EmployeeScreenKtTest {

    @get:Rule(order = 0)
    val hiltRule = HiltAndroidRule(this)

    @get:Rule(order = 1)
    val composeRule = createAndroidComposeRule<MainActivity>()

    private lateinit var navController: NavHostController

    private val newEmployee = Employee(
        employeeName = "New Employee",
        employeePhone = "9078563412",
        employeeSalary = "12000",
        employeeSalaryType = EmployeeSalaryType.Weekly.salaryType,
        employeeType = EmployeeType.PartTime.employeeType,
        employeePosition = "Master",
    )

    private val updatedEmployee = Employee(
        employeeName = "Updated Employee",
        employeePhone = "8078563412",
        employeeSalary = "15000",
        employeeSalaryType = EmployeeSalaryType.Daily.salaryType,
        employeeType = EmployeeType.FullTime.employeeType,
        employeePosition = "Chef",
    )

    private val newEmployeeTag = newEmployee.employeeName.plus("Tag")
    private val updatedEmployeeTag = updatedEmployee.employeeName.plus("Tag")

    private val todayDate = System.currentTimeMillis().toString().toDate

    private val newAbsentDate = 14
    private val newAbsentDateTag = newEmployee.employeeName.plus(newAbsentDate)

    private val updatedAbsentDate = 16
    private val updatedAbsentDateTag = updatedEmployee.employeeName.plus(updatedAbsentDate)

    private val newUpdatedAbsentDateTag = newEmployee.employeeName.plus(updatedAbsentDate)


    private val joinedDate = 12
    private val todayFormattedDate = System.currentTimeMillis().toString().toSalaryDate

    private val newTodayDateTag = newEmployee.employeeName.plus(System.currentTimeMillis().toString().toDate)
    private val updatedTodayDateTag = updatedEmployee.employeeName.plus(System.currentTimeMillis().toString().toDate)

    private val newEditTag = newEmployee.employeeName.plus("Edit")
    private val newPaymentTag = newEmployee.employeeName.plus("Payment")
    private val newAbsentTag = newEmployee.employeeName.plus("Absent")
    private val newDeleteTag = newEmployee.employeeName.plus("Delete")

    private val updatedEditTag = updatedEmployee.employeeName.plus("Edit")
    private val updatedPaymentTag = updatedEmployee.employeeName.plus("Payment")
    private val updatedAbsentTag = updatedEmployee.employeeName.plus("Absent")
    private val updatedDeleteTag = updatedEmployee.employeeName.plus("Delete")

    private val newSalary = EmployeeSalary(
        salaryType = SalaryType.Salary.salaryType,
        employeeSalary = "500",
        salaryPaymentType = PaymentType.Cash.paymentType,
    )

    private val updatedSalary = EmployeeSalary(
        salaryType = SalaryType.Advanced.salaryType,
        employeeSalary = "800",
        salaryPaymentType = PaymentType.Online.paymentType,
    )

    private val newAmountTag = newEmployee.employeeName.plus(newSalary.employeeSalary)
    private val newUpdatedAmountTag = newEmployee.employeeName.plus(updatedSalary.employeeSalary)
    private val updatedAmountTag = updatedEmployee.employeeName.plus(updatedSalary.employeeSalary)
    private val updatedNewAmountTag = updatedEmployee.employeeName.plus(newSalary.employeeSalary)


    @OptIn(
        ExperimentalAnimationApi::class,
        ExperimentalMaterialNavigationApi::class,
        ExperimentalMaterialApi::class
    )
    @Before
    fun setUp() {
        hiltRule.inject()
        composeRule.activity.setContent {
            PoposTheme {
                val scaffoldState = rememberScaffoldState()
                navController = rememberAnimatedNavController()
                val bottomSheetNavigator = rememberBottomSheetNavigator()
                navController.navigatorProvider += bottomSheetNavigator

                PoposNavigation(
                    scaffoldState = scaffoldState,
                    navController = navController,
                    bottomSheetNavigator = bottomSheetNavigator,
                    startRoute = EmployeeScreenDestination,
                )
            }
        }
    }

    //Employee feature test methods
    @Test
    fun a_create_update_employee_test() {
        checkScreenVisibleOrNot()

        checkAddNewEmployeeButtonAndScreenIsVisible()

        checkEmptyValidationErrorOnCreatingEmployee()

        checkLengthValidationOnInvalidDataWhileCreatingEmployee()

        checkCharactersAndDigitValidationErrorWhileCreatingEmployee()

        createNewEmployeeAndNavigateBackToEmployeeScreenAndCheckDetails()

        clickOnEmployeeAndCheckDoesItNavigateToDetailsScreenAndOtherDataIsPresentOrNot()

        clickOnEmployeeDetailsCardAndCheckAllEmployeeDetailsAreVisible()

        pressBackAndNavigateToEmployeeScreen()

        swipeRightOnNewEmployeeCardAndCheckPaymentEntryAndEditButtonsAreVisible()

        clickOnEditButtonAndCheckEditEmployeeScreenIsVisibleAndEditEmployeeData()

        checkRecentlyUpdatedEmployeeIsVisibleOrNotOnEmployeeScreen()

        clickOnUpdatedEmployeeAndCheckDoesItNavigateToDetailsScreen()

        clickOnEmployeeDetailsCardAndCheckAllUpdatedEmployeeDetailsAreVisible()

        navigateBackAndSwipeRightOnUpdatedEmployeeCardAndClickOnPaymentEntryButtonAndCheckPaymentEntryScreenIsVisibleOrNot()

        swipeRightOnUpdatedEmployeeAndCheckAbsentAndDeleteEmployeeButtonIsVisible()

        clickOnAbsentButtonAndCheckAddAbsentEntryScreenIsVisibleOrNot()

        clickOnDeleteButtonAndCheckDeleteDialogIsVisibleOrNotAndCancelDeletion()

        createNewEmployeeWithValidDataAndCheckItsVisibleOrNotOnEmployeeScreen()

        checkSearchAndFilterIconIsVisibleOnEmployeeScreen()

        clickOnSearchButtonAndSearchUsingNewKeywordAndCheckOnNewEmployeeIsVisibleOnEmployeeScreen()

        searchUsingUpdatedKeywordAndOnlyUpdatedEmployeeIsVisibleOnEmployeeScreen()

        searchUsingRandomStringAndShouldShownSearchedItemNotFoundOnEmployeeScreen()

        pressBackAndCloseSearchBarAllItemShouldVisibleOnScreen()

        clickOnFilterButtonAndCheckFilterScreenIsVisible()

    }

    @Test
    fun b_alreadyExistsValidationCheck() {
        createNewEmployeeThatAlreadyExistsReturnsValidationError()
        updateEmployeeDataThatAlreadyExistsReturnValidationError()
    }

    @Test
    fun c_deleteEmployeeTest() {
        swipeRightOnNewEmployeeAndClickOnDeleteAndDeleteThemAndCheckItsNotVisibleOnScreen()
    }

    private fun checkScreenVisibleOrNot() {
        //Check Employee screen and Add New Employee button is visible or not
        composeRule.onNodeWithText("Employees").assertExists("Employee Screen is not visible")
        composeRule.onNodeWithText("Add New Employee".uppercase()).assertExists("Add New Employee button is not visible")
    }

    private fun checkAddNewEmployeeButtonAndScreenIsVisible() {
        //Click on Add New Employee button and check it navigates to Add New Employee Screen
        composeRule.onNodeWithText("Add New Employee".uppercase()).performClick()
        composeRule.onNodeWithText("Create New Employee").assertExists("Add New Employee screen is not visible")
        composeRule.onNodeWithTag(EMPLOYEE_NAME_FIELD).assertExists("Employee Name field is not visible")
        composeRule.onNodeWithTag(EMPLOYEE_PHONE_FIELD).assertExists("Employee Phone field is not visible")
        composeRule.onNodeWithTag(EMPLOYEE_MONTHLY_SALARY_FIELD).assertExists("Employee Monthly Salary field is not visible")
        composeRule.onNodeWithTag(EMPLOYEE_SALARY_TYPE_FIELD).assertExists("Employee Salary Type field is not visible")
        composeRule.onNodeWithTag(EMPLOYEE_TYPE_FIELD).assertExists("Employee Type field is not visible")
        composeRule.onNodeWithTag(EMPLOYEE_POSITION_FIELD).assertExists("Employee Positions field is not visible")
        composeRule.onNodeWithTag(EMPLOYEE_JOINED_DATE_FIELD).assertExists("Employee Join Date field is not visible")
        composeRule.onNodeWithTag(ADD_EDIT_EMPLOYEE_BUTTON).assertExists("Employee AddEdit button is not visible")

    }

    private fun checkEmptyValidationErrorOnCreatingEmployee() {
        //Click on Add New Employee button and check validation error
        composeRule.onNodeWithTag(ADD_EDIT_EMPLOYEE_BUTTON).performClick()
        composeRule.onNodeWithTag(EMPLOYEE_NAME_ERROR).assertExists("Employee Name error is not visible")
        composeRule.onNodeWithTag(EMPLOYEE_PHONE_ERROR).assertExists("Employee Phone error is not visible")
        composeRule.onNodeWithTag(EMPLOYEE_MONTHLY_SALARY_ERROR).assertExists("Employee Monthly Salary Error is not visible")
        composeRule.onNodeWithTag(EMPLOYEE_POSITION_ERROR).assertExists("Employee Position Error is not visible")

        composeRule.onNodeWithTag(EMPLOYEE_NAME_ERROR).assertTextEquals("Employee name must not be empty")
        composeRule.onNodeWithTag(EMPLOYEE_PHONE_ERROR).assertTextEquals("Phone no must not be empty")
        composeRule.onNodeWithTag(EMPLOYEE_MONTHLY_SALARY_ERROR).assertTextEquals("Salary must not be empty")
        composeRule.onNodeWithTag(EMPLOYEE_POSITION_ERROR).assertTextEquals("Employee position is required")
    }

    private fun checkLengthValidationOnInvalidDataWhileCreatingEmployee() {
        // Check with invalid data return validation error
        composeRule.onNodeWithTag(EMPLOYEE_NAME_FIELD).performTextInput("hi")
        composeRule.onNodeWithTag(EMPLOYEE_PHONE_FIELD).performTextInput("89")
        composeRule.onNodeWithTag(EMPLOYEE_MONTHLY_SALARY_FIELD).performTextInput("90")

        Espresso.closeSoftKeyboard()

        composeRule.onNodeWithTag(ADD_EDIT_EMPLOYEE_BUTTON).performClick()

        composeRule.onNodeWithTag(EMPLOYEE_NAME_ERROR).assertTextEquals("Employee name must be more than 4 characters")
        composeRule.onNodeWithTag(EMPLOYEE_PHONE_ERROR).assertTextEquals("Phone must be 10(2) digits")
        composeRule.onNodeWithTag(EMPLOYEE_MONTHLY_SALARY_ERROR).assertTextEquals("Salary is in invalid")
        composeRule.onNodeWithTag(EMPLOYEE_POSITION_ERROR).assertTextEquals("Employee position is required")
    }

    private fun checkCharactersAndDigitValidationErrorWhileCreatingEmployee() {
        // Check with invalid data return validation error
        composeRule.onNodeWithTag(EMPLOYEE_NAME_FIELD).performTextInput("hello5")
        composeRule.onNodeWithTag(EMPLOYEE_PHONE_FIELD).performTextInput("908967hi")
        composeRule.onNodeWithTag(EMPLOYEE_MONTHLY_SALARY_FIELD).performTextInput("7hi")

        Espresso.closeSoftKeyboard()

        composeRule.onNodeWithTag(ADD_EDIT_EMPLOYEE_BUTTON).performClick()

        composeRule.waitForIdle()

        composeRule.onNodeWithTag(EMPLOYEE_NAME_ERROR).assertTextEquals("Employee name must not contain any digit")
        composeRule.onNodeWithTag(EMPLOYEE_PHONE_ERROR).assertTextEquals("Phone must not contain a letter")
        composeRule.onNodeWithTag(EMPLOYEE_MONTHLY_SALARY_ERROR).assertTextEquals("Salary must not contain any characters")
        composeRule.onNodeWithTag(EMPLOYEE_POSITION_ERROR).assertTextEquals("Employee position is required")

    }

    private fun createNewEmployeeAndNavigateBackToEmployeeScreenAndCheckDetails() {
        // Create employee with valid data should navigate back to employee screen and created employee should visible in screen
        composeRule.onNodeWithTag(EMPLOYEE_NAME_FIELD).performTextClearance()
        composeRule.onNodeWithTag(EMPLOYEE_NAME_FIELD).performTextInput(newEmployee.employeeName)
        composeRule.onNodeWithTag(EMPLOYEE_PHONE_FIELD).performTextClearance()
        composeRule.onNodeWithTag(EMPLOYEE_PHONE_FIELD).performTextInput(newEmployee.employeePhone)
        composeRule.onNodeWithTag(EMPLOYEE_MONTHLY_SALARY_FIELD).performTextClearance()
        composeRule.onNodeWithTag(EMPLOYEE_MONTHLY_SALARY_FIELD).performTextInput(newEmployee.employeeSalary)
        composeRule.onNodeWithTag(EMPLOYEE_SALARY_TYPE_FIELD).performClick()
        composeRule.onNodeWithText(newEmployee.employeeSalaryType).performClick()
        composeRule.onNodeWithTag(EMPLOYEE_TYPE_FIELD).performClick()
        composeRule.onNodeWithText(newEmployee.employeeType).performClick()
        composeRule.onNodeWithTag(EMPLOYEE_POSITION_FIELD).performClick()
        composeRule.onNodeWithText(newEmployee.employeePosition).performClick()

        Espresso.closeSoftKeyboard()
        composeRule.waitForIdle()
        Thread.sleep(500)
        composeRule.onNodeWithTag(ADD_EDIT_EMPLOYEE_BUTTON).performClick()

        //Check Recently created employee is visible or not
        composeRule.waitForIdle()
        Thread.sleep(500)

        composeRule.onNodeWithText("Employees").assertExists("Employee Screen is not visible")
        composeRule.onNodeWithText("Add New Employee".uppercase()).assertExists("Add New Employee button is not visible")
        composeRule.onAllNodesWithTag(newEmployeeTag, true)[0].assertExists()
        composeRule.onNodeWithText(newEmployee.employeePhone).assertExists("New Employee phone is not visible")

    }

    private fun clickOnEmployeeAndCheckDoesItNavigateToDetailsScreenAndOtherDataIsPresentOrNot() {
        //Click on employee and it should navigate to employee details screen
        composeRule.onAllNodesWithTag(newEmployeeTag, true)[0].performClick()
        composeRule.onNodeWithTag(EMPLOYEE_DETAILS_SCREEN).assertExists("Employee Details Screen is not visible")
        composeRule.onNodeWithTag("CalculateSalary").assertExists("CalculateSalary Card is not visible")
        composeRule.onNodeWithTag("EmployeeDetails").assertExists("Employee Details card is not visible")
        composeRule.onNodeWithTag("PaymentDetails").assertExists("PaymentDetails card is not visible")
        composeRule.onNodeWithTag("AbsentDetails").assertExists("Absent Details card is not visible")
    }

    private fun clickOnEmployeeDetailsCardAndCheckAllEmployeeDetailsAreVisible() {
        //Click on employee details and check all details are visible
        composeRule.onNodeWithTag("EmployeeDetails").performClick()

        composeRule.onNodeWithTag(newEmployee.employeeName, true).assertExists("Employee Name is not visible")
        composeRule.onNodeWithTag(newEmployee.employeePhone, true).assertExists("Employee Phone is not visible")
        composeRule.onNodeWithTag(newEmployee.employeeSalary.toRupee, true).assertExists("Employee salary is not visible")
        composeRule.onNodeWithTag(newEmployee.employeeType, true).assertExists("Employee Type is not visible")
        composeRule.onNodeWithTag(newEmployee.employeeSalaryType, true).assertExists("Employee Salary Type is not visible")
        composeRule.onNodeWithTag(newEmployee.employeePosition, true).assertExists("Employee Position is not visible")

//        composeRule.onNodeWithTag(newEmployee.employeeName, true).assertTextContains(newEmployee.employeeName, true)
//        composeRule.onNodeWithTag(newEmployee.employeePhone, true).assertTextContains(newEmployee.employeePhone, true)
//        composeRule.onNodeWithTag(newEmployee.employeeSalary.toRupee, true).assertTextContains(newEmployee.employeeSalary.toRupee, true)
//        composeRule.onNodeWithTag(newEmployee.employeeType, true).assertTextContains(newEmployee.employeeType, true)
//        composeRule.onNodeWithTag(newEmployee.employeeSalaryType, true).assertTextContains(newEmployee.employeeSalaryType, true)
//        composeRule.onNodeWithTag(newEmployee.employeePosition, true).assertTextContains(newEmployee.employeePosition, true)
//        composeRule.onNodeWithTag(newTodayDateTag).assertTextContains(todayFormattedDate, true)
    }

    private fun pressBackAndNavigateToEmployeeScreen() {
        composeRule.waitForIdle()

        //Click on back button and navigate back to employee screen
        composeRule.onNodeWithTag(STANDARD_BACK_BUTTON).performClick()
        composeRule.onNodeWithText("Employees").assertExists("Employee Screen is not visible")
        composeRule.onNodeWithText("Add New Employee".uppercase()).assertExists("Add New Employee button is not visible")
    }

    private fun swipeRightOnNewEmployeeCardAndCheckPaymentEntryAndEditButtonsAreVisible() {
        composeRule.waitForIdle()

        //Swipe left the employee and click on edit button to edit employee data
        composeRule.onAllNodesWithTag(newEmployeeTag, true)[0].performTouchInput {
            swipeRight()
        }
        composeRule.onNodeWithContentDescription("Add Payment Entry").assertExists("Add Payment Entry button is not visible")
        composeRule.onNodeWithContentDescription("Edit Employee").assertExists("Edit Employee button is not visible")

    }

    private fun clickOnEditButtonAndCheckEditEmployeeScreenIsVisibleAndEditEmployeeData () {
        //Click on edit button to update employee
        composeRule.onNodeWithContentDescription("Edit Employee").performClick()
        composeRule.onNodeWithText("Update Employee").assertExists("Update Employee screen is not visible")

        composeRule.waitForIdle()

        composeRule.onNodeWithTag(EMPLOYEE_NAME_FIELD).performTextClearance()
        composeRule.onNodeWithTag(EMPLOYEE_NAME_FIELD).performTextInput(updatedEmployee.employeeName)
        composeRule.onNodeWithTag(EMPLOYEE_PHONE_FIELD).performTextClearance()
        composeRule.onNodeWithTag(EMPLOYEE_PHONE_FIELD).performTextInput(updatedEmployee.employeePhone)
        composeRule.onNodeWithTag(EMPLOYEE_MONTHLY_SALARY_FIELD).performTextClearance()
        composeRule.onNodeWithTag(EMPLOYEE_MONTHLY_SALARY_FIELD).performTextInput(updatedEmployee.employeeSalary)
        composeRule.onNodeWithTag(EMPLOYEE_SALARY_TYPE_FIELD).performClick()
        composeRule.onNodeWithText(updatedEmployee.employeeSalaryType).performClick()
        composeRule.onNodeWithTag(EMPLOYEE_TYPE_FIELD).performClick()
        composeRule.onNodeWithText(updatedEmployee.employeeType).performClick()
        composeRule.onNodeWithTag(EMPLOYEE_POSITION_FIELD).performClick()
        composeRule.onNodeWithText(updatedEmployee.employeePosition).performClick()
        composeRule.onNodeWithTag(EMPLOYEE_JOINED_DATE_FIELD).performClick()
        composeRule.onAllNodesWithTag("dialog_date_selection_$joinedDate")[0].assertExists("Date picker is not visible")
        composeRule.onAllNodesWithTag("dialog_date_selection_$joinedDate")[0].performClick()
        composeRule.onNodeWithTag(POSITIVE_BUTTON).performClick()
